--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome To Our Studio!</div>
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+                <div class="masthead-subheading">Welcome To Ryan-M47👑!</div>
+                <div class="masthead-heading text-uppercase">It's Nice To Meet You🫶🏼</div>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More About you 🤩</a>
             </div>
         </header>
         <!-- Services-->
