I make some changement

--- a/index.html
+++ b/index.html
@@ -44,41 +44,54 @@
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More About you 🤩</a>
             </div>
         </header>
-        <!-- Services-->
-        <section class="page-section" id="services">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-                <div class="row text-center">
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                </div>
+       <!-- Services-->
+<section class="page-section" id="services">
+    <div class="container">
+        <div class="text-center">
+            <h2 class="section-heading text-uppercase">Services</h2>
+            <h3 class="section-subheading text-muted">Skills & strengths I bring as an accounting professional.</h3>
+        </div>
+        <div class="row text-center">
+
+            <!-- Financial Analysis -->
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fas fa-chart-line fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="my-3">Financial Analysis</h4>
+                <p class="text-muted">
+                    Experienced in reviewing financial statements, analyzing trends, and providing insights to support better budgeting and decision-making.
+                </p>
             </div>
-        </section>
+
+            <!-- Accounting Software -->
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fas fa-calculator fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="my-3">Accounting Software</h4>
+                <p class="text-muted">
+                    Skilled in tools such as Excel, QuickBooks, and other accounting platforms used for organizing, tracking, and managing financial data.
+                </p>
+            </div>
+
+            <!-- Financial Compliance -->
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fas fa-file-invoice-dollar fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="my-3">Financial Compliance</h4>
+                <p class="text-muted">
+                    Knowledgeable in business ethics, financial reporting standards, and procedures that ensure accuracy and compliance with regulations.
+                </p>
+            </div>
+
+        </div>
+    </div>
+</section>
         <!-- Portfolio Grid-->
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
