I make some changement

--- a/index.html
+++ b/index.html
@@ -201,68 +201,123 @@
         </div>
     </div>
 </section>
-        <!-- About-->
-        <section class="page-section" id="about">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+        <!-- About (Dark Mode Modern) -->
+<section class="page-section bg-dark text-light" id="about">
+    <div class="container">
+        <div class="text-center">
+            <h2 class="section-heading text-uppercase text-light">About Me</h2>
+            <h3 class="section-subheading text-muted">My accounting journey at Medgar Evers College.</h3>
+        </div>
+        <ul class="timeline">
+
+            <!-- Step 1 -->
+            <li>
+                <div class="timeline-image">
+                    <img class="rounded-circle img-fluid" src="assets/img/about/early-interest.jpg" alt="Early interest in numbers" />
                 </div>
-                <ul class="timeline">
-                    <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>December 2015</h4>
-                                <h4 class="subheading">Transition to Full Service</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>July 2020</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <h4>
-                                Be Part
-                                <br />
-                                Of Our
-                                <br />
-                                Story!
-                            </h4>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </section>
+                <div class="timeline-panel bg-secondary text-light">
+                    <div class="timeline-heading">
+                        <h4>2017–2020</h4>
+                        <h4 class="subheading">Where It Started</h4>
+                    </div>
+                    <div class="timeline-body">
+                        <p class="text-muted">
+                            Even before college, I liked working with numbers and keeping things organized. Budgeting, tracking expenses, 
+                            keeping everything balanced — it just came naturally to me. That’s when I realized accounting was the right path.
+                        </p>
+                    </div>
+                </div>
+            </li>
+
+            <!-- Step 2 -->
+            <li class="timeline-inverted">
+                <div class="timeline-image">
+                    <img class="rounded-circle img-fluid" src="assets/img/about/mec-start.jpg" alt="Starting Medgar Evers College" />
+                </div>
+                <div class="timeline-panel bg-secondary text-light">
+                    <div class="timeline-heading">
+                        <h4>August 2024</h4>
+                        <h4 class="subheading">Starting Medgar Evers College</h4>
+                    </div>
+                    <div class="timeline-body">
+                        <p class="text-muted">
+                            I began studying Accounting at Medgar Evers College in Fall 2024. Learning the basics — financial accounting, bookkeeping, 
+                            and how businesses manage their money — made me even more sure I chose the right major.
+                        </p>
+                    </div>
+                </div>
+            </li>
+
+            <!-- Step 3 -->
+            <li>
+                <div class="timeline-image">
+                    <img class="rounded-circle img-fluid" src="assets/img/about/accounting-growth.jpg" alt="Studying accounting" />
+                </div>
+                <div class="timeline-panel bg-secondary text-light">
+                    <div class="timeline-heading">
+                        <h4>2025–2027</h4>
+                        <h4 class="subheading">Gaining Real Skills</h4>
+                    </div>
+                    <div class="timeline-body">
+                        <p class="text-muted">
+                            I grew a lot during these years. I took classes like auditing, cost accounting, managerial accounting, taxation, 
+                            and ethics. I practiced using financial software and started understanding what real accountants deal with daily.
+                        </p>
+                    </div>
+                </div>
+            </li>
+
+            <!-- Step 4 -->
+            <li class="timeline-inverted">
+                <div class="timeline-image">
+                    <img class="rounded-circle img-fluid" src="assets/img/about/graduation-path.jpg" alt="Preparing for graduation" />
+                </div>
+                <div class="timeline-panel bg-secondary text-light">
+                    <div class="timeline-heading">
+                        <h4>2028–2029</h4>
+                        <h4 class="subheading">On My Way to Graduation</h4>
+                    </div>
+                    <div class="timeline-body">
+                        <p class="text-muted">
+                            As I get closer to graduating in 2029, I’m focused on internships, building experience, and preparing 
+                            for the next chapter of my career. These years are about staying disciplined and finishing strong.
+                        </p>
+                    </div>
+                </div>
+            </li>
+
+            <!-- Dream Job -->
+            <li>
+                <div class="timeline-image">
+                    <img class="rounded-circle img-fluid" src="assets/img/about/dream-accountant.jpg" alt="Dream accounting career" />
+                </div>
+                <div class="timeline-panel bg-secondary text-light">
+                    <div class="timeline-heading">
+                        <h4>Future Goal</h4>
+                        <h4 class="subheading">My Dream Job</h4>
+                    </div>
+                    <div class="timeline-body">
+                        <p class="text-muted">
+                            My goal is to become a professional accountant — maybe in corporate accounting, auditing, or eventually working 
+                            toward my CPA. I want to help businesses stay organized, make smart financial choices, and grow. 
+                            This is the future I’m building for myself.
+                        </p>
+                    </div>
+                </div>
+            </li>
+
+            <!-- Final -->
+            <li class="timeline-inverted">
+                <div class="timeline-image">
+                    <h4>
+                        Be Part<br />Of My<br />Story!
+                    </h4>
+                </div>
+            </li>
+
+        </ul>
+    </div>
+</section>
         <!-- Team-->
         <section class="page-section bg-light" id="team">
             <div class="container">
