I make some changement

--- a/index.html
+++ b/index.html
@@ -201,91 +201,139 @@
         </div>
     </div>
 </section>
-        <!-- About (Dark Mode Modern) -->
-<section class="page-section bg-dark text-light" id="about">
+        <!-- About-->
+<section class="page-section" id="about">
     <div class="container">
         <div class="text-center">
-            <h2 class="section-heading text-uppercase text-light">About Me</h2>
-            <h3 class="section-subheading text-muted">My accounting journey at Medgar Evers College.</h3>
+            <h2 class="section-heading text-uppercase">About</h2>
+            <h3 class="section-subheading text-muted">My journey as an Accounting major at Medgar Evers College.</h3>
         </div>
         <ul class="timeline">
 
-            <!-- Step 1 -->
+            <!-- Timeline Item 1 -->
             <li>
                 <div class="timeline-image">
-                    <img class="rounded-circle img-fluid" src="assets/img/about/early-interest.jpg" alt="Early interest in numbers" />
+                    <img class="rounded-circle img-fluid" src="assets/img/about/accounting-beginnings.jpg" alt="Early interest in numbers" />
                 </div>
-                <div class="timeline-panel bg-secondary text-light">
+                <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4>2017–2020</h4>
-                        <h4 class="subheading">Where It Started</h4>
+                        <h4 class="subheading">Where It All Started</h4>
                     </div>
                     <div class="timeline-body">
                         <p class="text-muted">
-                            Even before college, I liked working with numbers and keeping things organized. Budgeting, tracking expenses, 
-                            keeping everything balanced — it just came naturally to me. That’s when I realized accounting was the right path.
+                            Even before college, I always loved working with numbers and keeping things organized. 
+                            I would help family track expenses, make budgets, and keep everything balanced. 
+                            It didn’t feel like work — it felt natural. Little by little, I started to realize that 
+                            these simple habits were actually the beginning of my interest in accounting.
                         </p>
                     </div>
                 </div>
             </li>
 
-            <!-- Step 2 -->
+            <!-- Timeline Item 2 -->
             <li class="timeline-inverted">
                 <div class="timeline-image">
-                    <img class="rounded-circle img-fluid" src="assets/img/about/mec-start.jpg" alt="Starting Medgar Evers College" />
+                    <img class="rounded-circle img-fluid" src="assets/img/about/medgar-evers-start.jpg" alt="Starting college at Medgar Evers" />
                 </div>
-                <div class="timeline-panel bg-secondary text-light">
+                <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4>August 2024</h4>
                         <h4 class="subheading">Starting Medgar Evers College</h4>
                     </div>
                     <div class="timeline-body">
                         <p class="text-muted">
-                            I began studying Accounting at Medgar Evers College in Fall 2024. Learning the basics — financial accounting, bookkeeping, 
-                            and how businesses manage their money — made me even more sure I chose the right major.
+                            In Fall 2024, I started my journey at <strong>Medgar Evers College</strong> as an Accounting major. 
+                            Walking onto campus for the first time felt like a fresh start and a big step toward the future I want. 
+                            I began learning the basics of financial accounting, bookkeeping, and how businesses manage their money. 
+                            Starting this major made me feel like I was exactly where I was supposed to be.
                         </p>
                     </div>
                 </div>
             </li>
 
-            <!-- Step 3 -->
+            <!-- Timeline Item 3 -->
             <li>
                 <div class="timeline-image">
-                    <img class="rounded-circle img-fluid" src="assets/img/about/accounting-growth.jpg" alt="Studying accounting" />
+                    <img class="rounded-circle img-fluid" src="assets/img/about/studying-accounting.jpg" alt="Accounting coursework and growth" />
                 </div>
-                <div class="timeline-panel bg-secondary text-light">
+                <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4>2025–2027</h4>
-                        <h4 class="subheading">Gaining Real Skills</h4>
+                        <h4 class="subheading">Building Skills & Gaining Confidence</h4>
                     </div>
                     <div class="timeline-body">
                         <p class="text-muted">
-                            I grew a lot during these years. I took classes like auditing, cost accounting, managerial accounting, taxation, 
-                            and ethics. I practiced using financial software and started understanding what real accountants deal with daily.
+                            During these years, I dove deeper into my major. I took courses like managerial accounting, auditing, 
+                            taxation, cost accounting, and business ethics. I also gained experience using financial software 
+                            and working on case studies that felt like real business situations.
+                            <br><br>
+                            This was when I really started to feel myself growing — not just as a student, but as someone who 
+                            can actually see a future in the accounting world. My confidence and focus only got stronger.
                         </p>
                     </div>
                 </div>
             </li>
 
-            <!-- Step 4 -->
+            <!-- Timeline Item 4 -->
             <li class="timeline-inverted">
                 <div class="timeline-image">
-                    <img class="rounded-circle img-fluid" src="assets/img/about/graduation-path.jpg" alt="Preparing for graduation" />
+                    <img class="rounded-circle img-fluid" src="assets/img/about/graduation-goals.jpg" alt="Preparing for graduation" />
                 </div>
-                <div class="timeline-panel bg-secondary text-light">
+                <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4>2028–2029</h4>
-                        <h4 class="subheading">On My Way to Graduation</h4>
+                        <h4 class="subheading">Preparing for Graduation</h4>
                     </div>
                     <div class="timeline-body">
                         <p class="text-muted">
-                            As I get closer to graduating in 2029, I’m focused on internships, building experience, and preparing 
-                            for the next chapter of my career. These years are about staying disciplined and finishing strong.
+                            As graduation gets closer, I’m focused on turning everything I’ve learned into real experience. 
+                            I’m preparing for internships, improving my skills, and getting ready to start my career. 
+                            These final years at Medgar Evers College are all about growth, discipline, and staying committed to my goals.
                         </p>
                     </div>
                 </div>
             </li>
 
+            <!-- ⭐ NEW Timeline Item: Dream Job -->
+            <li>
+                <div class="timeline-image">
+                    <img class="rounded-circle img-fluid" src="assets/img/about/dream-job-accountant.jpg" alt="Dream job in accounting" />
+                </div>
+                <div class="timeline-panel">
+                    <div class="timeline-heading">
+                        <h4>Future Goal</h4>
+                        <h4 class="subheading">My Dream Job</h4>
+                    </div>
+                    <div class="timeline-body">
+                        <p class="text-muted">
+                            My dream is to work as a professional accountant — whether in corporate accounting, auditing, 
+                            or eventually becoming a CPA. I want to help businesses stay organized, make smart financial decisions, 
+                            and grow. Accounting is more than numbers to me — it’s about stability, responsibility, and 
+                            building a solid future. 
+                            <br><br>
+                            This is the career I’m working toward, and every step I take is bringing me closer to the job I’ve always pictured myself doing.
+                        </p>
+                    </div>
+                </div>
+            </li>
+
+            <!-- Timeline Final -->
+            <li class="timeline-inverted">
+                <div class="timeline-image">
+                    <h4>
+                        Be Part
+                        <br />
+                        Of My
+                        <br />
+                        Story!
+                    </h4>
+                </div>
+            </li>
+
+        </ul>
+    </div>
+</section>
             <!-- Dream Job -->
             <li>
                 <div class="timeline-image">
