--- a/index.html
+++ b/index.html
@@ -201,124 +201,62 @@
         </div>
     </div>
 </section>
-        <!-- About-->
+       <!-- About-->
 <section class="page-section" id="about">
     <div class="container">
         <div class="text-center">
             <h2 class="section-heading text-uppercase">About</h2>
-            <h3 class="section-subheading text-muted">My journey as an Accounting major at Medgar Evers College.</h3>
+            <h3 class="section-subheading text-muted">My journey toward becoming an accountant.</h3>
         </div>
         <ul class="timeline">
-
-            <!-- Timeline Item 1 -->
             <li>
-                <div class="timeline-image">
-                    <img class="rounded-circle img-fluid" src="assets/img/about/accounting-beginnings.jpg" alt="Early interest in numbers" />
-                </div>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4>2017–2020</h4>
-                        <h4 class="subheading">Where It All Started</h4>
+                        <h4>2009-2011</h4>
+                        <h4 class="subheading">The Beginning of My Interest</h4>
                     </div>
-                    <div class="timeline-body">
-                        <p class="text-muted">
-                            Even before college, I always loved working with numbers and keeping things organized. 
-                            I would help family track expenses, make budgets, and keep everything balanced. 
-                            It didn’t feel like work — it felt natural. Little by little, I started to realize that 
-                            these simple habits were actually the beginning of my interest in accounting.
-                        </p>
-                    </div>
+                    <div class="timeline-body"><p class="text-muted">
+                        This was when I first discovered my interest in numbers and problem-solving. I enjoyed learning how money works, how businesses run, and how financial decisions shape outcomes. This early curiosity later pushed me toward studying accounting.
+                    </p></div>
                 </div>
             </li>
-
-            <!-- Timeline Item 2 -->
             <li class="timeline-inverted">
-                <div class="timeline-image">
-                    <img class="rounded-circle img-fluid" src="assets/img/about/medgar-evers-start.jpg" alt="Starting college at Medgar Evers" />
-                </div>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4>August 2024</h4>
-                        <h4 class="subheading">Starting Medgar Evers College</h4>
+                        <h4>March 2011</h4>
+                        <h4 class="subheading">Developing My Skills</h4>
                     </div>
-                    <div class="timeline-body">
-                        <p class="text-muted">
-                            In Fall 2024, I started my journey at <strong>Medgar Evers College</strong> as an Accounting major. 
-                            Walking onto campus for the first time felt like a fresh start and a big step toward the future I want. 
-                            I began learning the basics of financial accounting, bookkeeping, and how businesses manage their money. 
-                            Starting this major made me feel like I was exactly where I was supposed to be.
-                        </p>
-                    </div>
+                    <div class="timeline-body"><p class="text-muted">
+                        As I learned more, I began building real accounting skills — from understanding financial statements to practicing budgeting and analyzing numbers. This stage helped me realize that accounting wasn’t just math; it was a way to help businesses make smart decisions.
+                    </p></div>
                 </div>
             </li>
-
-            <!-- Timeline Item 3 -->
             <li>
-                <div class="timeline-image">
-                    <img class="rounded-circle img-fluid" src="assets/img/about/studying-accounting.jpg" alt="Accounting coursework and growth" />
-                </div>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4>2025–2027</h4>
-                        <h4 class="subheading">Building Skills & Gaining Confidence</h4>
+                        <h4>December 2015</h4>
+                        <h4 class="subheading">Committed to the Accounting Path</h4>
                     </div>
-                    <div class="timeline-body">
-                        <p class="text-muted">
-                            During these years, I dove deeper into my major. I took courses like managerial accounting, auditing, 
-                            taxation, cost accounting, and business ethics. I also gained experience using financial software 
-                            and working on case studies that felt like real business situations.
-                            <br><br>
-                            This was when I really started to feel myself growing — not just as a student, but as someone who 
-                            can actually see a future in the accounting world. My confidence and focus only got stronger.
-                        </p>
-                    </div>
+                    <div class="timeline-body"><p class="text-muted">
+                        By this time, I knew accounting was the major I wanted to pursue. I began studying more seriously — learning about auditing, financial reporting, taxation, and the importance of accuracy and ethics in the profession.
+                    </p></div>
                 </div>
             </li>
-
-            <!-- Timeline Item 4 -->
             <li class="timeline-inverted">
-                <div class="timeline-image">
-                    <img class="rounded-circle img-fluid" src="assets/img/about/graduation-goals.jpg" alt="Preparing for graduation" />
-                </div>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4>2028–2029</h4>
-                        <h4 class="subheading">Preparing for Graduation</h4>
+                        <h4>July 2020</h4>
+                        <h4 class="subheading">Growth & Professional Goals</h4>
                     </div>
-                    <div class="timeline-body">
-                        <p class="text-muted">
-                            As graduation gets closer, I’m focused on turning everything I’ve learned into real experience. 
-                            I’m preparing for internships, improving my skills, and getting ready to start my career. 
-                            These final years at Medgar Evers College are all about growth, discipline, and staying committed to my goals.
-                        </p>
-                    </div>
+                    <div class="timeline-body"><p class="text-muted">
+                        My accounting journey continued to grow as I gained experience, improved my analytical skills, and set goals for my future career — whether in auditing, corporate accounting, tax preparation, or becoming a CPA someday.
+                    </p></div>
                 </div>
             </li>
-
-            <!-- ⭐ NEW Timeline Item: Dream Job -->
-            <li>
-                <div class="timeline-image">
-                    <img class="rounded-circle img-fluid" src="assets/img/about/dream-job-accountant.jpg" alt="Dream job in accounting" />
-                </div>
-                <div class="timeline-panel">
-                    <div class="timeline-heading">
-                        <h4>Future Goal</h4>
-                        <h4 class="subheading">My Dream Job</h4>
-                    </div>
-                    <div class="timeline-body">
-                        <p class="text-muted">
-                            My dream is to work as a professional accountant — whether in corporate accounting, auditing, 
-                            or eventually becoming a CPA. I want to help businesses stay organized, make smart financial decisions, 
-                            and grow. Accounting is more than numbers to me — it’s about stability, responsibility, and 
-                            building a solid future. 
-                            <br><br>
-                            This is the career I’m working toward, and every step I take is bringing me closer to the job I’ve always pictured myself doing.
-                        </p>
-                    </div>
-                </div>
-            </li>
-
-            <!-- Timeline Final -->
             <li class="timeline-inverted">
                 <div class="timeline-image">
                     <h4>
@@ -330,7 +268,6 @@
                     </h4>
                 </div>
             </li>
-
         </ul>
     </div>
 </section>
